--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 index:
    path: /
    controller: App\Controller\DefaultController::index
+
+redirectHomepage:
+   path: /homepage
+   controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
+   defaults: 
+      route: 'blog_homepage'
+      permanent: true
+      keepQueryParams: true
