--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 index:
    path: /
    controller: App\Controller\DefaultController::index
+
+aboutList:
+   path: /about/list
+   controller: App\Controller\DefaultController::aboutList
